@@ -84,7 +84,6 @@ import fi.otavanopisto.muikku.schooldata.entity.WorkspaceAssessmentRequest;
 import fi.otavanopisto.muikku.schooldata.entity.WorkspaceSubject;
 import fi.otavanopisto.muikku.schooldata.entity.WorkspaceUser;
 import fi.otavanopisto.muikku.security.MuikkuPermissions;
-import fi.otavanopisto.muikku.servlet.BaseUrl;
 import fi.otavanopisto.muikku.session.SessionController;
 import fi.otavanopisto.muikku.users.UserController;
 import fi.otavanopisto.muikku.users.UserEntityController;
@@ -103,10 +102,6 @@ public class EvaluationRESTService extends PluginRESTService {
 
   private static final long serialVersionUID = -2380108419567067263L;
   
-  @Inject
-  @BaseUrl
-  private String baseUrl;
-
   @Inject
   private Logger logger;
 
@@ -1235,7 +1230,9 @@ public class EvaluationRESTService extends PluginRESTService {
       
       List<WorkspaceEntity> workspaceEntities = workspaceEntityController.listActiveWorkspaceEntitiesByUserIdentifier(loggedUser);
       List<Long> workspaceEntityIds = workspaceEntities.stream().map(workspaceEntity -> workspaceEntity.getId()).distinct().collect(Collectors.toList());
-      List<InterimEvaluationRequest> interimEvaluationRequests = evaluationController.listInterimEvaluationRequests(workspaceEntityIds, Boolean.FALSE);
+      List<InterimEvaluationRequest> interimEvaluationRequests = workspaceEntityIds.isEmpty()
+          ? Collections.emptyList()
+          : evaluationController.listInterimEvaluationRequests(workspaceEntityIds, Boolean.FALSE);
       for (InterimEvaluationRequest interimEvaluationRequest : interimEvaluationRequests) {
         restAssessmentRequests.add(toRestAssessmentRequest(interimEvaluationRequest));
       }
@@ -1451,7 +1448,7 @@ public class EvaluationRESTService extends PluginRESTService {
       List<WorkspaceMaterial> evaluatedAssignments = workspaceMaterialController.listVisibleWorkspaceMaterialsByAssignmentType(
           workspaceEntity,
           WorkspaceMaterialAssignmentType.EVALUATED);
-      assignmentsTotal = new Long(evaluatedAssignments.size());
+      assignmentsTotal = Long.valueOf(evaluatedAssignments.size()); 
       // Assignments done by user
       if (assignmentsTotal > 0) {
         UserEntity userEntity = userEntityController.findUserEntityByUserIdentifier(compositeAssessmentRequest.getUserIdentifier());            
@@ -1537,7 +1534,7 @@ public class EvaluationRESTService extends PluginRESTService {
     List<WorkspaceMaterial> evaluatedAssignments = workspaceMaterialController.listVisibleWorkspaceMaterialsByAssignmentType(
         workspaceEntity,
         WorkspaceMaterialAssignmentType.EVALUATED);
-    assignmentsTotal = new Long(evaluatedAssignments.size());
+    assignmentsTotal = Long.valueOf(evaluatedAssignments.size());
     // Assignments done by user
     if (assignmentsTotal > 0) {
       List<WorkspaceMaterialReplyState> replyStates = new ArrayList<WorkspaceMaterialReplyState>();
